--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
-<body >
+<body  bgcolor="#2980b9">
     
     <div class="container">    
 
